@@ -114,7 +114,7 @@ void DiskUsageViewer::slotUpdateStatus( QString status )
     if( status.isEmpty() ) {
       Directory * dir = diskUsage->getCurrentDir();
       if( dir )
-        status = prefix + dir->fileName() + "  [" + KIO::convertSize( dir->size() ) + "]";
+        status = prefix + dir->name() + "  [" + KIO::convertSize( dir->size() ) + "]";
     }
     statusLabel->setText( status );
   }
