@@ -13,6 +13,7 @@
     ADDED: new krarc (password handling, type autodetection, writing
            out archiver error messages, step into hidden archives,...)
 
+    FIXED: wrong character set is used on the radial map labels
     FIXED: TC style rename does not work with "Obey KDE's global selection policy"
     FIXED: [ 1189341 ] minimize to tray problems with GNOME
     FIXED: set duplicate exclusion and maximum count for all KHistoryCombos
